--- a/plot_fit_activity/assets/ag-theme-alpine.css
+++ b/plot_fit_activity/assets/ag-theme-alpine.css
@@ -11,8 +11,7 @@
   justify-content: center !important;
 }
 
-.ag-cell-label {
+.ag-header-cell-label {
   justify-content: center !important;
 }
-
 
